--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitchps",
+  "name": "twitch-pubsub",
   "version": "1.5.5",
   "description": "Library to easily interact with Twitch PubSub System",
   "keywords": [
@@ -16,14 +16,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jctrvlr/twitchps.git"
+    "url": "git+https://github.com/sammwyy/twitch-pubsub.git"
   },
   "author": "John Cummings",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jctrvlr/twitchps/issues"
+    "url": "https://github.com/sammwyy/twitch-pubsub/issues"
   },
-  "homepage": "https://github.com/jctrvlr/twitchps#readme",
+  "homepage": "https://github.com/sammwyy/twitch-pubsub#readme",
+  "dependencies": {
+    "events": "^3.0.0",
+    "shortid": "^2.2.8",
+    "ws": "^7.5.5"
+  },
+  "devDependencies": {
+    "eslint": "~6.8.0"
+  },
   "eslintConfig": {
     "env": {
       "es6": true,
@@ -68,13 +76,5 @@
       "no-var": 2,
       "no-inner-declarations": 0
     }
-  },
-  "dependencies": {
-    "events": "^3.0.0",
-    "shortid": "^2.2.8",
-    "ws": "^7.0.0"
-  },
-  "devDependencies": {
-    "eslint": "~6.8.0"
   }
 }
